melhorando estilização dashboard